<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="pair_bluetooth_device">Pair Bluetooth Device</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">Connect</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="oui">OUI</string>
    <string name="status">Status</string>
    <string name="action">Action</string>
    <string name="bluetooth_not_supported_error">This device does not support Bluetooth!</string>
    <string name="dismiss">Dismiss</string>
    <string name="bluetooth_permission_denied">Permission to use Bluetooth denied!</string>
    <string name="scanning_for_bluetooth_devices">Scanning for Bluetooth devices</string>
    <string name="scan">Scan</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="vendor">Vendor</string>
</resources>