<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bluetooth_dialog_background"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/ic_bluetooth" />

        <Space
            android:layout_width="4dp"
            android:layout_height="0dp" />

        <TextView
            android:id="@+id/tv_connect_devices_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pair_bluetooth_device"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/iv_close_bluetooth_dialog"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/ic_close_white" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/off"
                android:textColor="@color/color_white" />

            <Switch
                android:id="@+id/btn_activate_bluetooth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/on"
                android:textColor="@color/color_white" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/tv_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/scan"
                android:textColor="@color/color_white" />

            <Switch
                android:id="@+id/btn_start_discovery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_discovery_progress_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="invisible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scanning_for_bluetooth_devices"
                android:textColor="@color/color_white" />

            <Space
                android:layout_width="12dp"
                android:layout_height="0dp" />

            <ProgressBar
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:indeterminate="true" />

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_divider" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_bluetooth_devices"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:choiceMode="singleChoice" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>